Premiers changements pour une version mobile correcte

--- a/static/css/prepa-concours.css
+++ b/static/css/prepa-concours.css
@@ -1,3 +1,8 @@
+:root {
+    --breakpoint: 30rem;
+}
+  
+
 p, ul {
     font-size: 16px;
 }
@@ -15,11 +20,17 @@ section h1{
 }
 
 .prepa-concours-background{
-    padding: 4rem;
+    padding: 1rem;
 
     background: url("../images/prepa-concours/fond-prepa-concours.jpg");
     background-position: center center;
 
+}
+
+@media (min-width: var(--breakpoint)) { 
+    .prepa-concours-background{
+        padding: 4rem;
+    }
 }
 
 
@@ -90,7 +101,7 @@ section h1{
     align-self: flex-end;
     text-align: right;
 
-    width: 50%;
+    width: 100%;
     height: 10rem;
     margin-top: 2rem;
     
@@ -100,6 +111,13 @@ section h1{
 
     font-weight: bold;
     font-size: 0.9em;
+}
+
+@media (min-width: var(--breakpoint)) { 
+    #intro .author{
+        width: 50%;
+
+    }
 }
 
 #intro .author span{
